2021/02/08
• Added emoji tracking.
2021/01/30
• Added alias "request feature" for "report bug".
2020/10/22
• uwu metacommand
2020/09/30
• Shorthands are now dynamic rather than hardcoded.
• meme command now honors line breaks in input.
2020/09/16
• Shorthands for long pieces of text: !navy and !has.
• meme command works with metacommands.
2020/09/15
• User avatar appears behind meme text.
• Ability to delete bugs through Discord.
2020/09/04
• Bot can now make memes.
2020/08/08
• Bot ignores excessive   spaces.
2020/07/31
• Edit bad commands into good ones!
• Improved alarm handling.
2020/07/24
• Minecraft functionality removed in favor of a dedicated Minecraft bot.
2020/07/22
• Bot can execute commands on a different channel than it was invoked on.
• Bot can handle multiple meta-commands on one command.
• Bot can tell when people are talking about it.
• Bot can now mock you, if you want.
2020/07/20
• Bot now knows two meta-commands: quietly and loudly.
2020/05/04
• Bot will notify if it's having trouble reaching the Minecraft server.
2020/04/26
• Minecraft is now an alarm rather than an action.
• Actions renamed to responses.
2020/04/25
• Event functionality.
2020/04/09
• Respond appropriately to additional meme number.
2020/03/31
• Improved error logging.
• Fixed bug where users couldn't be shamed.
2020/03/23
• Minecraft server changes will now properly update the topic.
• Fixed pluralization error in taboo response.
2020/03/18
• Added blackjack functionality.
2020/01/13
• Added Minecraft command.
• Bot will let us know when Alex's IP address changes.
2019/12/24:
• Added dice rolling command.
• Added taboo and untaboo commands.
2019/12/18:
• Added echo command.
• Fix bug where bot got confused by its own name.
2018/08/28:
• Shaming is channel-specific.
• Bot no longer talks to itself.
2019/08/18:
• Shame command added.
2019/08/08:
• Improved database logic.
• Fix for exploding head 69 bug.
2019/08/03:
• Added names command.
• Added report bug command.
2019/08/02